# airflow_practices

./: .gitignore  airflow.cfg  pyproject.toml  unittests.cfg
dags/: airflow_basic_usage.py  download_rocket_launches.py  stocksense.py  stocksense_bashoperator.py
